syntax = "proto3";

package snapshots;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/snapshots/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteSnapshotRequest {
    string SnapshotId = 1;
    string OperationCloudId = 2;
    string OperationFolderId = 3;
}

message DeleteSnapshotTaskState {
    DeleteSnapshotRequest Request = 1;
}
