syntax = "proto3";

import "cloud/storage/core/protos/error.proto";
import "cloud/filestore/public/api/protos/headers.proto";

package NCloud.NFileStore.NProto;

option java_package = "ru.yandex.cloud.filestore.proto";
option go_package = "a.yandex-team.ru/cloud/filestore/public/api/protos";

////////////////////////////////////////////////////////////////////////////////
// CreateCheckpoint request/response

message TCreateCheckpointRequest
{
    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Checkpoint identifier.
    string CheckpointId = 3;

    // Root node (covered by checkpoint)
    uint64 NodeId = 4;
}

message TCreateCheckpointResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;
}

////////////////////////////////////////////////////////////////////////////////
// DestroyCheckpoint request/response

message TDestroyCheckpointRequest
{
    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Checkpoint identifier.
    string CheckpointId = 3;
}

message TDestroyCheckpointResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;
}
